@@ -45,6 +45,11 @@ Minor features
   indicate no password set. By default, it uses the md5 library for
   hashing, but this can be changed in a HashCol definition.
 
+* Minor change in logging to console - logger no longer stores the output
+  file, it gets the file from module sys every time by name; this means
+  logging will use new sys.stdout (or stderr) in case the user changed
+  them.
+
 * Changed the order of testing of SQLite modules - look for external
   PySQLite2 before sqlite3.
 
